force-app/main/default/objects/GitHubActionsObj__c/GitHubActionsObj__c.object-meta.xml
<CustomObject>
    <label>GitHubActionsObj</label>
    <nameField>
        <label>GitHubActionsObje Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GitHubActionsObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>