force-app/main/default/objects/GitHubActionsObj__c/fields/Nov2nd__c.field-meta.xml
<CustomField>
    <fullName>Nov2nd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nov2nd</label>
    <type>Checkbox</type>
</CustomField>